@@ -1,3 +1,9 @@
+2007-03-11 Borut Razem <borut.razem AT siol.net>
+
+	* packages/packages.mk: defined LOCAL_DIR using $(HOME)/... instead of
+	  ~/... so that --prefix=$(LOCAL_DIR) works
+	* packages/build.nsis/Makefile: removed ABS_LOCAL_DIR
+
 2007-03-07 Borut Razem <borut.razem AT siol.net>
 
 	* packages/*: initial check in
